Set header flex-dirc to column make hdrpt1 flex
make flex-direction of header column and make header-pt1 a flex
container. Set justify content to space between for header-pt1

--- a/style.css
+++ b/style.css
@@ -6,4 +6,11 @@
 
 .header {
     display: flex;
+    flex-direction: column;
 }
+
+.header-pt1 {
+    display: flex;
+    justify-content: space-between;
+}
+
