--- a/style.css
+++ b/style.css
@@ -5,17 +5,17 @@
 }
 
 .header {
-    display: flex;
-    flex-direction: column;
+   display: flex;
+   flex-direction: column;
 }
 
 .header-pt1 {
-    display: flex;
-    justify-content: space-between;
+   display: flex;
+   justify-content: space-between;
 }
 
 .nav-list {
-    list-style: none;
+   list-style: none;
+   display: flex;
+   gap: 1rem;
 }
-
-
