Change background and text colors of header
changed background color to #1f2937 and text color of its children
to #f9faf8

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 .header {
    display: flex;
    flex-direction: column;
+   background-color: #1f2937;
+   color: #f9faf8;
 }
 
 .header-pt1 {
@@ -21,5 +23,6 @@
 }
 
 .nav-list a {
-    text-decoration: none;
+   text-decoration: none;
+   color: inherit;
 }
