Change font weight of p in header-pt1
changed font weight of p in header-pt1 to 700 and color of nav items
to #E5E7EB

--- a/style.css
+++ b/style.css
@@ -17,13 +17,18 @@
    justify-content: space-around;
 }
 
+.header-pt1 p {
+   font-weight: 700;
+}
+
 .nav-list {
    list-style: none;
    display: flex;
    gap: 1rem;
+   font-size: 18px;
 }
 
 .nav-list a {
    text-decoration: none;
-   color: inherit;
+   color: #E5E7EB;
 }
