Add display flex to header-pt2
set justify content to center. make width of header-pt2-2 to 100%

--- a/style.css
+++ b/style.css
@@ -41,3 +41,14 @@
 .header-pt2-1 :nth-child(2) {
    color: #e5e7eb;
 }
+
+.header-pt2 {
+   display: flex;
+   justify-content: center;
+}
+
+.header-pt2-2 {
+   width: 100%;
+}
+
+
