--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 .header-pt1 {
    display: flex;
    justify-content: space-around;
-   margin: 1rem
+   margin: 1rem 0;
 }
 
 .header-pt1 p {
@@ -45,10 +45,25 @@
 
 .header-pt2 {
    display: flex;
-   justify-content: center;
+   justify-content: space-around;
+   margin: 5rem 2rem;
+}
+
+.header-pt2-1 {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
 }
 
 .header-pt2-2 {
    width: 100px;
+   border: 1px solid white;
+   flex: auto;
+}
+
+.img-placeholder {
+    width: 100%;
+    height: 100%;
+    border: 1px solid red;
 }
 
