--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@
     justify-content: center;
     align-items: center;
     color: black;
+    text-align: center;
 }
 
 button {
@@ -77,4 +78,7 @@ button {
     border: none;
     color: #fff;
     background-color: #3882F6;
+    font-weight: 600;
 }
+
+
