--- a/style.css
+++ b/style.css
@@ -90,8 +90,34 @@ button {
    font-weight: 900;
    color: #1F2937;
    text-align: center;
-   margin: 2rem 0;
+   margin: 2.5rem 0;
 }
 
+.boxes {
+   display: flex;
+   justify-content: space-around;
+   gap: 3rem;
+   text-align: center;
+   color: gray;
+   width: 80%;
+   margin: 0 auto;
+}
+
+.box-container {
+   display: flex;
+   flex-direction: column;
+   width: 150px;
+   height: 220px;
+   gap: 0.8rem;
+}
+
+.box {
+   width: 100%;
+   height: 100%;
+   border: 3px solid #3882F6;
+   border-radius: 10px;
+   text-align: center;
+   display: center
+}
 
 
